python/testData/highlighting/typeVarTupleWithBoundsReported.py
def foo[*Ts: <error descr="ParamSpec and TypeVarTuple cannot have constraints and upper bounds">str</error>](): ...